project page update of VLA-JEPA

--- a/VLA-JEPA/index.html
+++ b/VLA-JEPA/index.html
@@ -97,6 +97,15 @@
                   <span>Code</span>
                   </a>
               </span>
+              <span class="link-block">
+                <a href="https://huggingface.co/ginwind/VLA-JEPA"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <img src="https://huggingface.co/front/assets/huggingface_logo-noborder.svg" alt="Hugging Face" style="width: 1em; height: 1em;">
+                  </span>
+                  <span>Hugging Face</span>
+                  </a>
+              </span>
             </div>
 
           </div>
